--- a/.jfrog-pipelines/RunHookSimple.yml
+++ b/.jfrog-pipelines/RunHookSimple.yml
@@ -1,302 +1,12 @@
 
 resources:
 
-  - name: res_quia_1t
+  - name: res_quia_1jt
     type: PropertyBag
     configuration:
       key1: value1
       key2: value2
-  - name: res_praesentium_2t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_ratione_3t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_quia_4t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_cumque_5t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_voluptatem_6t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_consequatur_7t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_hic_8t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_in_9t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_nihil_10t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_tempora_11t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_ut_12t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_nostrum_13t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_ab_14t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_quas_15t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_tempora_16t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_ipsam_17t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_et_18t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_harum_19t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_et_20t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_necessitatibus_21t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_nemo_22t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_commodi_23t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_soluta_24t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_non_25t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_optio_26t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_non_27t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_doloribus_28t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_doloribus_29t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_vel_30t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_architecto_31t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_maxime_32t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_voluptatem_33t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_omnis_34t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_et_35t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_dolores_36t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_dolorum_37t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_ut_38t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_officiis_39t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_ducimus_40t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_impedit_41t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_asperiores_42t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_odit_43t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_et_44t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_quaerat_45t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_et_46t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_rem_47t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_neque_48t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_molestias_49t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_magni_50t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_et_51t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_rem_52t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_neque_53t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_molestias_54t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_magni_55t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_et_56t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_rem_57t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_neque_58t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_molestias_59t
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_magni_60t
+  - name: res_praesentium_2jt
     type: PropertyBag
     configuration:
       key1: value1
@@ -338,16 +48,8 @@ pipelines:
             key42: "value42"
             key43: "value43"
           inputResources:
-            - name: res_et_51t
-            - name: res_rem_52t
-            - name: res_neque_53t
-            - name: res_molestias_54t
-            - name: res_magni_55t
-            - name: res_et_56t
-            - name: res_rem_57t
-            - name: res_neque_58t
-            - name: res_molestias_59t
-            - name: res_magni_60t
+            - name: res_quia_1jt
+            - name: res_praesentium_2jt
         execution:
           onExecute:
             - 'echo "Executing step on ${stepvar_id}"'
