--- a/.jfrog-pipelines/RunHookSimple.yml
+++ b/.jfrog-pipelines/RunHookSimple.yml
@@ -55,6 +55,29 @@ pipelines:
             - 'echo "Executing step on ${stepvar_id}"'
             - export date=$(date)
             - printenv
-
+      - name: step_sint_3t
+        type: Bash
+        execution:
+          onExecute:
+            - printenv
+            - 'echo "Executing step on ${stepvar_id}"'
+            - export date=$(date)
+            - write_output res_praesentium_2t "date1=$date"
+            - printenv
+            - printenv
+            - printenv
+            - printenv
+            - printenv
+            - printenv
+            - printenv
+        configuration:
+          inputResources:
+            - name: res_quia_1jt
+            - name: res_praesentium_2jt
+        execution:
+          onExecute:
+            - 'echo "Executing step on ${stepvar_id}"'
+            - export date=$(date)
+            - printenv
 
 
