--- a/.jfrog-pipelines/RunHookSimple.yml
+++ b/.jfrog-pipelines/RunHookSimple.yml
@@ -18,6 +18,7 @@ pipelines:
           onExecute: 
             - printenv 
             - echo "Executing Pre Run"
+            - echo "Test"
     postRun: 
       execution: 
         onExecute: 
