--- a/.jfrog-pipelines/RunHookSimple.yml
+++ b/.jfrog-pipelines/RunHookSimple.yml
@@ -1,70 +1,70 @@
 
-resources:
-  - name: res_quia_1jt
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
-  - name: res_praesentium_2jt
-    type: PropertyBag
-    configuration:
-      key1: value1
-      key2: value2
+# resources:
+#   - name: res_quia_1jt
+#     type: PropertyBag
+#     configuration:
+#       key1: value1
+#       key2: value2
+#   - name: res_praesentium_2jt
+#     type: PropertyBag
+#     configuration:
+#       key1: value1
+#       key2: value2
             
-pipelines:
-  - name: RunHookSimplePipeline1Deepak
-    preRun: 
-        execution: 
-          onExecute: 
-            - printenv 
-            - echo "Executing Pre Run"
-            - echo "Test"
-    postRun: 
-      execution: 
-        onExecute: 
-          - printenv 
-          - echo "Executing Post Run"
-    configuration:
-      environmentVariables:
-        readOnly:
-          TEST_ENV: "pipelines"
-          JUST_FES: "options"
-          LOL_FOO: "test"
-    steps:
-      - name: step_updatet
-        type: Bash
-        configuration:
-          environmentVariables:
-            key1: "value11"
-            key2: "value12"
-            key3: "value13"
-            key21: "value21"
-            key22: "value22"
-            key23: "value23"
-            key31: "value31"
-            key32: "value32"
-            key33: "value33"
-            key41: "value41"
-            key42: "value42"
-            key43: "value43"
-          inputResources:
-            - name: res_quia_1jt
-            - name: res_praesentium_2jt
-        execution:
-          onExecute:
-            - 'echo "Executing step on ${stepvar_id}"'
-            - export date=$(date)
-            - printenv
-      - name: step_sint_3t
-        type: Bash
-        execution:
-          onExecute:
-            - printenv
-            - 'echo "Executing step on ${stepvar_id}"'
-            - export date=$(date)
-        configuration:
-          inputResources:
-            - name: res_quia_1jt
-            - name: res_praesentium_2jt
+# pipelines:
+#   - name: RunHookSimplePipeline1Deepak
+#     preRun: 
+#         execution: 
+#           onExecute: 
+#             - printenv 
+#             - echo "Executing Pre Run"
+#             - echo "Test"
+#     postRun: 
+#       execution: 
+#         onExecute: 
+#           - printenv 
+#           - echo "Executing Post Run"
+#     configuration:
+#       environmentVariables:
+#         readOnly:
+#           TEST_ENV: "pipelines"
+#           JUST_FES: "options"
+#           LOL_FOO: "test"
+#     steps:
+#       - name: step_updatet
+#         type: Bash
+#         configuration:
+#           environmentVariables:
+#             key1: "value11"
+#             key2: "value12"
+#             key3: "value13"
+#             key21: "value21"
+#             key22: "value22"
+#             key23: "value23"
+#             key31: "value31"
+#             key32: "value32"
+#             key33: "value33"
+#             key41: "value41"
+#             key42: "value42"
+#             key43: "value43"
+#           inputResources:
+#             - name: res_quia_1jt
+#             - name: res_praesentium_2jt
+#         execution:
+#           onExecute:
+#             - 'echo "Executing step on ${stepvar_id}"'
+#             - export date=$(date)
+#             - printenv
+#       - name: step_sint_3t
+#         type: Bash
+#         execution:
+#           onExecute:
+#             - printenv
+#             - 'echo "Executing step on ${stepvar_id}"'
+#             - export date=$(date)
+#         configuration:
+#           inputResources:
+#             - name: res_quia_1jt
+#             - name: res_praesentium_2jt
 
 
