--- a/.jfrog-pipelines/singlePipeline.yml
+++ b/.jfrog-pipelines/singlePipeline.yml
@@ -1,11 +1,19 @@
 pipelines:
-- name: Single_test_pipeline
-  configuration:
-    jfrogCliVersion: 2
-  steps:
-    - name: test_step
-      type: Bash
-      execution:
-        onStart:
-          - echo $Hello
-        
+  - name: condition1
+    steps:
+      - name: step1
+        type: Bash
+        execution:
+          onExecute:
+            - echo 'step1'
+            - add_run_variables 'var1=1'
+      - name: step2
+        type: Bash
+        configuration:
+          condition: 'var1 == 1'
+          inputSteps:
+            - name: step1
+        execution:
+          onExecute:
+            - echo 'success'
+            - echo $var1
